优化冗余代码